--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
 appdirs==1.4.3
 asgiref==3.2.7
 autopep8==1.5
-beautifulsoup4==4.9.0
 certifi==2020.4.5.1
 chardet==3.0.4
 distlib==0.3.0
 dj-database-url==0.5.0
-Django==3.0.5
+Django==3.0.7
 django-heroku==0.3.1
 dnspython==1.16.0
 filelock==3.0.12
 gunicorn==20.0.4
 idna==2.9
+lxml==4.5.0
 mysql-connector-python==8.0.19
 mysqlclient==1.4.6
 pi==0.1.2
-Pillow==7.1.1
 protobuf==3.6.1
 psycopg2==2.8.5
 pycodestyle==2.5.0
 pytz==2019.3
-requests==2.23.0
 six==1.14.0
 soupsieve==2.0
 SQLAlchemy==1.3.16
